added new entries from latest patch
- fixed some links
- translated new stuff (and changed some words to fit better)
- minor other fixes and corrections

--- a/Translations/German/text-bonus-change.xml
+++ b/Translations/German/text-bonus-change.xml
@@ -671,6 +671,10 @@
 		<de-DE>Changed my mind after establishing a law</de-DE>
 	</Entry>
 	<Entry>
+		<zType>TEXT_BONUS_EVENTOPTION_AMBITION_FINISHED_OPTION_NO</zType>
+		<de-DE>Meinen eigenen Weg gegangen</de-DE>
+	</Entry>
+	<Entry>
 		<zType>TEXT_BONUS_EVENTOPTION_RIVER_CROSSING_1</zType>
 		<de-DE>Bridged natural landmark</de-DE>
 	</Entry>
