--- a/Translations/German/text-character-change.xml
+++ b/Translations/German/text-character-change.xml
@@ -203,11 +203,11 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_THE_YOUNGER</zType>
-		<de-DE>der Jüngste</de-DE>
+		<de-DE>der Jüngere</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_THE_ELDER</zType>
-		<de-DE>der Älteste</de-DE>
+		<de-DE>der Ältere</de-DE>
 	</Entry>
 	<!--Game Text-->
 	<Entry>
