--- a/Translations/German/text-cityName-change.xml
+++ b/Translations/German/text-cityName-change.xml
@@ -169,7 +169,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_CITYNAME_BYZANTIUM</zType>
-		<de-DE>Byzantium</de-DE>
+		<de-DE>Byzantion</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CITYNAME_CADIZ</zType>
@@ -662,6 +662,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_CITYNAME_MEMPHIS</zType>
+		<!--Memphis-->
 		<de-DE>Menefer</de-DE>
 	</Entry>
 	<Entry>
@@ -674,7 +675,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_CITYNAME_MILETUS</zType>
-		<de-DE>Miletus</de-DE>
+		<de-DE>Miletos</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CITYNAME_MODICIA</zType>
@@ -834,6 +835,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_CITYNAME_PERSEPOLIS</zType>
+		<!--Persepolis-->
 		<de-DE>Parsa</de-DE>
 	</Entry>
 	<Entry>
@@ -918,6 +920,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_CITYNAME_RHAGES</zType>
+		<!--Shahr-e Rey-->
 		<de-DE>Raga</de-DE>
 	</Entry>
 	<Entry>
@@ -1062,6 +1065,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_CITYNAME_TANIS</zType>
+		<!--Tanis-->
 		<de-DE>Djanet</de-DE>
 	</Entry>
 	<Entry>
@@ -1074,7 +1078,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_CITYNAME_TARSUS</zType>
-		<de-DE>Tarsos</de-DE>
+		<de-DE>Tarsa</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CITYNAME_TAYU_DJAYET</zType>
