--- a/Translations/German/text-misc-change.xml
+++ b/Translations/German/text-misc-change.xml
@@ -11,7 +11,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAINMENU_HIRING_NOTICE_GRAPHICS</zType>
-		<de-DE><![CDATA[<i>Senior Graphics Engineer</i>]]></de-DE>
+		<de-DE><![CDATA[<i>Graphics Engineer</i>]]></de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRIBE_ADJECTIVE</zType>
