updated to latest main version
- fixed a missing de-DE string

--- a/Translations/German/text-audio-change.xml
+++ b/Translations/German/text-audio-change.xml
@@ -40,7 +40,59 @@ music tracks and can prevent monetization of your videos.
 Streaming any music from the game is at your own risk.
 		</de-DE>
 	</Entry>
-	
+	<!-- Christopher Tin -->
+	<Entry>
+		<zType>TEXT_AUDIO_ARTIST_CHRISTOPHER_TIN</zType>
+		<de-DE>Christopher Tin</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_AUDIO_MUSIC_BG_I_Lift_My_Eyes_feat_Abeer_Nehme</zType>
+		<de-DE>I Lift My Eyes, Featuring Abeer Nehme</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_AUDIO_MUSIC_BG_The_Augur_Speaks__Rome</zType>
+		<de-DE>The Augur Speaks (Rome)</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_AUDIO_MUSIC_BG_War_Elephant__Carthage</zType>
+		<de-DE>War Elephant (Carthage)</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_AUDIO_MUSIC_BG_Festival_of_Dionysus__Greece</zType>
+		<de-DE>Festival of Dionysus (Greece)</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_AUDIO_MUSIC_BG_The_Gardens__Babylon</zType>
+		<de-DE>The Gardens (Babylon)</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_AUDIO_MUSIC_BG_Zealot_King__Assyria</zType>
+		<de-DE>Zealot King (Assyria)</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_AUDIO_MUSIC_BG_Persepolis__Persia</zType>
+		<de-DE>Persepolis (Persia)</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_AUDIO_MUSIC_BG_Trade_Routes__Egypt</zType>
+		<de-DE>Trade Routes (Egypt)</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_AUDIO_MUSIC_BG_Tahmilah</zType>
+		<de-DE>I Tahmilah (feat. Camille Feghali)</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_AUDIO_MUSIC_BG_Mawwal</zType>
+		<de-DE>II Mawwal (feat. Meena Shamaly)</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_AUDIO_MUSIC_BG_Tarab_Pt__1</zType>
+		<de-DE>III Tarab Pt. 1 (feat. Meena Shamaly)</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_AUDIO_MUSIC_BG_Tarab_Pt__2</zType>
+		<de-DE>IV Tarab Pt. 2 (feat. Layal Watfeh)</de-DE>
+	</Entry>
 	<!-- music track names -->
 	<Entry>
 		<zType>TEXT_AUDIO_MUSIC_BG_3_PIECES_IN_OLD_STYLE___NO1</zType>
@@ -335,6 +387,70 @@ Streaming any music from the game is at your own risk.
 	<Entry>
 		<zType>TEXT_AUDIO_ARTIST_ERIC_WHITACRE</zType>
 		<de-DE>Eric Whitacre</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_AUDIO_ARTIST_BULGARIAN_STATE</zType>
+		<de-DE>Bulgarian State Television Female Choir</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_AUDIO_ARTIST_SALMA_AL_ASSAL</zType>
+		<de-DE>Salma Al Assal and others</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_AUDIO_ARTIST_HOVHAN_MANDAKOUNI</zType>
+		<de-DE>Hovhan Mandakouni</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_AUDIO_ARTIST_MUHAMMAD_ABDUL_KARIM</zType>
+		<de-DE>Muhammad Abdul Karim</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_AUDIO_ARTIST_DANIEL_GAZARIAN</zType>
+		<de-DE>Daniel Gazarian</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_AUDIO_ARTIST_SHOGHAKEN_FOLK_ENSEMBLE</zType>
+		<de-DE>Shoghaken Folk Ensemble</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_AUDIO_ARTIST_HAISSMAVOURK_CHOIR</zType>
+		<de-DE>Haissmavourk Choir</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_AUDIO_ARTIST_KHACHATUR_NERCESIAN</zType>
+		<de-DE>Khachatur Nercesian</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_AUDIO_ARTIST_HOSSAM_RAMZY</zType>
+		<de-DE>Hossam Ramzy</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_AUDIO_ARTIST_HARUTIAN_HARUTIUNIAN</zType>
+		<de-DE>Harutiun Harutiunian</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_AUDIO_ARTIST_KAVKASIA_TRIO</zType>
+		<de-DE>Kavkasia Trio</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_AUDIO_ARTIST_AMED_MUKHTAR</zType>
+		<de-DE>Ahmed Mukhtar</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_AUDIO_ARTIST_AARAKEL_SIUNETSI</zType>
+		<de-DE>Arakel Siunetsi</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_AUDIO_ARTIST_BEDRUDIN_HALIBIE</zType>
+		<de-DE>Bedrudin Halibie</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_AUDIO_ARTIST_SUFI_MUSIC_ENSEMBLE</zType>
+		<de-DE>Sufi Music Ensemble</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_AUDIO_ARTIST_KOMITAS_VARDAPET</zType>
+		<de-DE>Komitas Vardapet</de-DE>
 	</Entry>
 	<!-- MUSICBED ************************************************************* -->
 	<Entry>
