--- a/Translations/German/ModInfo.xml
+++ b/Translations/German/ModInfo.xml
@@ -5,11 +5,12 @@
   <modpicture>1920px-Flag_of_Germany.svg.png</modpicture>
   <author>Revan (aka. ShadowDuke)</author>
   <modioID>143281</modioID>
-  <modioFileID>1770915</modioFileID>
-  <modversion>1.53</modversion>
+  <modioFileID>1904802</modioFileID>
+  <modversion>1.55</modversion>
   <homepage>https://github.com/ShadowDuke/OW_GermanPatch</homepage>
   <singlePlayer>true</singlePlayer>
   <multiplayer>true</multiplayer>
+  <scenario>false</scenario>
   <modDependencies />
   <modIncompatibilities />
 </ModInfo>
